--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,3 @@
 title: Cy Language Model
 description: Syntax, semantics, and features of the Cy language.
-remote_theme: pages-themes/midnight@v0.2.0
-plugins: jekyll-remote-theme
+theme: jekyll-theme-midnight
