--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: Cy Language Model
 description: Syntax, semantics, and features of the Cy language.
-theme: jekyll-theme-midnight
+theme: minima
