--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Cy Language Model
 description: Syntax, semantics, and features of the Cy language.
 remote_theme: amitmerchant1990/reverie
-baseurl: https://stu042.github.io/cy-plan/
+baseurl: /cy-plan
