--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Cy Language Model
 description: Syntax, semantics, and features of the Cy language.
-remote_theme: pages-themes/cayman@v0.2.0
+remote_theme: pages-themes/slate@v0.2.0
 
